<?xml version="1.0" encoding="utf-8" ?>

<com.appspot.estadodeltransito.views.DashboardLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/lay_main"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@android:color/white">

	<Button android:id="@+id/menu_avenues_button"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/menu_avenues"
		android:textSize="22sp"
		android:drawableTop="@drawable/ic_menu_avenues"
		android:background="@null" />

	<Button android:id="@+id/menu_highways_button"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/menu_highways"
		android:textSize="22sp"
		android:drawableTop="@drawable/ic_menu_highways"
		android:background="@null" />

	<Button android:id="@+id/menu_subways_button"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@null"
		android:text="@string/menu_subways"
		android:textSize="22sp"
		android:drawableTop="@drawable/ic_menu_subways" />

	<Button android:id="@+id/menu_trains_button"
	    android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@null"
		android:text="@string/menu_trains"
		android:textSize="22sp"
		android:drawableTop="@drawable/ic_menu_trains" />

</com.appspot.estadodeltransito.views.DashboardLayout>
